RESOLVED FIXED101238
Fix asm operand type for weakCompareAndSwap on ARM_THUMB2
https://bugs.webkit.org/show_bug.cgi?id=101238
Summary Fix asm operand type for weakCompareAndSwap on ARM_THUMB2
Hans Wennborg
Reported 2012-11-05 11:27:05 PST
Fix asm operand type for weakCompareAndSwap on ARM_THUMB2
Attachments
Patch (2.24 KB, patch)
2012-11-05 11:35 PST, Hans Wennborg
no flags
Hans Wennborg
Comment 1 2012-11-05 11:35:04 PST
Hans Wennborg
Comment 2 2012-11-05 11:39:22 PST
Filip: would you like to take a look?
Hans Wennborg
Comment 3 2012-11-07 11:07:17 PST
Ping?
Benjamin Poulain
Comment 4 2012-11-07 12:10:01 PST
Comment on attachment 172369 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=172369&action=review > Source/WTF/ChangeLog:20 > + Also make 'result' for the X86 version an 'unsigned char' to make it > + more clear that it is a byte. I honestly have no clue about that one, but that seems consistent with the old code.
WebKit Review Bot
Comment 5 2012-11-07 12:48:18 PST
Comment on attachment 172369 [details] Patch Clearing flags on attachment: 172369 Committed r133796: <http://trac.webkit.org/changeset/133796>
WebKit Review Bot
Comment 6 2012-11-07 12:48:22 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.